[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "kedrodemo"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
kedrodemo = "kedrodemo.__main__:main"

[tool.kedro]
package_name = "kedrodemo"
project_name = "kedrodemo"
kedro_init_version = "0.19.8"
tools = [ "Data Structure", "Kedro Viz",]
example_pipeline = "True"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "kedrodemo.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
